@@ -25,7 +25,8 @@ if( $res->count() == 0 ) {
 		"<tr><th scope=\"col\">ID</th><th scope=\"col\">name</th>" .
 		"<th scope=\"col\">contest</th><th scope=\"col\">allow<br />submit</th>" .
 		"<th scope=\"col\">allow<br />judge</th><th scope=\"col\">testdata</th>" .
-		"<th scope=\"col\">timelimit</th></tr>" .
+		"<th scope=\"col\">timelimit</th>" .
+		"<th scope=\"col\">colour</th></tr>" .
 		"</thead>\n<tbody>\n";
 
 	while($row = $res->next()) {
@@ -39,7 +40,12 @@ if( $res->count() == 0 ) {
 			"</td><td align=\"center\">".printyn($row['allow_submit']).
 			"</td><td align=\"center\">".printyn($row['allow_judge']).
 			"</td><td class=\"filename\">".htmlspecialchars($row['testdata']).
-			"</td><td>".(int)$row['timelimit'];
+			"</td><td>".(int)$row['timelimit'].
+			"</td>".
+			( isset($row['color'])
+			? '<td style="background: '.htmlspecialchars($row['color']).';">'.
+			  htmlspecialchars($row['color'])
+			: '<td>' );
 			if ( IS_ADMIN ) {
 				echo "</td><td>" . 
 					editLink('problem', $row['probid']) . " " . 
